buttons no longer terrible when the text wraps

--- a/client/common/sass/base/mixins/_buttons.sass
+++ b/client/common/sass/base/mixins/_buttons.sass
@@ -19,6 +19,7 @@
 	border-radius: $button-border-radius
 	text-decoration: none
 	text-align: center
+	display: inline-block
 	+hover
 		text-decoration: none
 
